--- a/aircon/aircon.ioc
+++ b/aircon/aircon.ioc
@@ -1,18 +1,13 @@
 #MicroXplorer Configuration settings - do not modify
 ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_5
-ADC1.Channel-3\#ChannelRegularConversion=ADC_CHANNEL_6
-ADC1.Channel-4\#ChannelRegularConversion=ADC_CHANNEL_7
 ADC1.ContinuousConvMode=DISABLE
+ADC1.DiscontinuousConvMode=DISABLE
 ADC1.EnableInjectedConversion=DISABLE
-ADC1.IPParameters=Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,NbrOfConversionFlag,master,ContinuousConvMode,NbrOfConversion,Rank-3\#ChannelRegularConversion,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,Rank-4\#ChannelRegularConversion,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,EnableInjectedConversion
-ADC1.NbrOfConversion=3
+ADC1.IPParameters=Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,NbrOfConversionFlag,master,ContinuousConvMode,NbrOfConversion,EnableInjectedConversion,DiscontinuousConvMode
+ADC1.NbrOfConversion=1
 ADC1.NbrOfConversionFlag=1
 ADC1.Rank-2\#ChannelRegularConversion=1
-ADC1.Rank-3\#ChannelRegularConversion=2
-ADC1.Rank-4\#ChannelRegularConversion=3
 ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
-ADC1.SamplingTime-3\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
-ADC1.SamplingTime-4\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
 ADC1.master=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
@@ -29,9 +24,9 @@ Mcu.Name=STM32F103T(4-6)Ux
 Mcu.Package=VFQFPN36
 Mcu.Pin0=PD0-OSC_IN
 Mcu.Pin1=PD1-OSC_OUT
-Mcu.Pin10=PA11
-Mcu.Pin11=PA12
-Mcu.Pin12=PA13
+Mcu.Pin10=PB3
+Mcu.Pin11=PB4
+Mcu.Pin12=PB5
 Mcu.Pin13=PB6
 Mcu.Pin14=PB7
 Mcu.Pin15=VP_SYS_VS_ND
@@ -41,9 +36,9 @@ Mcu.Pin3=PA3
 Mcu.Pin4=PA5
 Mcu.Pin5=PA6
 Mcu.Pin6=PA7
-Mcu.Pin7=PB0
-Mcu.Pin8=PB1
-Mcu.Pin9=PB2
+Mcu.Pin7=PA11
+Mcu.Pin8=PA12
+Mcu.Pin9=PA15
 Mcu.PinsNb=17
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
@@ -65,8 +60,8 @@ PA11.Locked=true
 PA11.Signal=GPIO_Input
 PA12.Locked=true
 PA12.Signal=GPIO_Input
-PA13.Locked=true
-PA13.Signal=GPIO_Input
+PA15.Locked=true
+PA15.Signal=GPIO_Input
 PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA3.Mode=Asynchronous
@@ -74,12 +69,12 @@ PA3.Signal=USART2_RX
 PA5.Signal=ADCx_IN5
 PA6.Signal=ADCx_IN6
 PA7.Signal=ADCx_IN7
-PB0.Locked=true
-PB0.Signal=GPIO_Input
-PB1.Locked=true
-PB1.Signal=GPIO_Input
-PB2.Locked=true
-PB2.Signal=GPIO_Input
+PB3.Locked=true
+PB3.Signal=GPIO_Input
+PB4.Locked=true
+PB4.Signal=GPIO_Input
+PB5.Locked=true
+PB5.Signal=GPIO_Input
 PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
 PB7.Mode=I2C
